Fix slider on mobile again

--- a/styles/index.css
+++ b/styles/index.css
@@ -62,5 +62,6 @@
 
     .slider {
         max-width: none;
+        height: 100%;
     }
 }
